Fixed newsletter button safari issue

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -95,14 +95,15 @@ footer {
               font-family: "GeneralSans-Regular";
               padding: 0.4rem 1.6rem;
               border-radius: 2em;
-              width: 9rem;
+              width: 10rem;
               border: 2px solid clr.$white;
-              font-size: 1rem;
+              font-size: 0.9rem;
               display: grid;
               place-items: center;
               position: relative;
               cursor: pointer;
               overflow: hidden;
+              background-color: clr.$white;
               @include mq.mobileL {
                 padding: 0.3rem 1rem 0.2rem;
                 font-size: 0.8rem;
